[package]
name = "sunny_milk"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield-struct = "0.10.1"
md5 = "0.7.0"
nix = { version = "0.29.0", features = ["ioctl"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "2.0.11"
windows = "0.60.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
